# statusd

./: .gitignore  CMakeLists.txt  README.md  compile_commands.json  statusd.service  statusd_watch.sh
src/: main.cpp  statusd.hpp
